--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Andrey Skrypay",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
     "fs": "0.0.1-security"
